Login do usuario integrado ao serviço, e sessão para controle do usuario logado criados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QuNews</string>
+    <string name="cadastro">Cadastro</string>
+    <string name="feed">Feed</string>
 </resources>
